--- a/gui/src/settings/condition-window.ui
+++ b/gui/src/settings/condition-window.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>conditionWindow</class>
- <widget class="QDialog" name="conditionWindow">
+ <class>ConditionWindow</class>
+ <widget class="QDialog" name="ConditionWindow">
   <property name="windowModality">
    <enum>Qt::WindowModal</enum>
   </property>
@@ -98,7 +98,7 @@
   <connection>
    <sender>buttonBox</sender>
    <signal>accepted()</signal>
-   <receiver>conditionWindow</receiver>
+   <receiver>ConditionWindow</receiver>
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
@@ -114,7 +114,7 @@
   <connection>
    <sender>buttonBox</sender>
    <signal>rejected()</signal>
-   <receiver>conditionWindow</receiver>
+   <receiver>ConditionWindow</receiver>
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
