--- a/gui/src/settings/start-window.ui
+++ b/gui/src/settings/start-window.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>startWindow</class>
- <widget class="QDialog" name="startWindow">
+ <class>StartWindow</class>
+ <widget class="QDialog" name="StartWindow">
   <property name="windowModality">
    <enum>Qt::ApplicationModal</enum>
   </property>
@@ -161,7 +161,7 @@
   <connection>
    <sender>buttonBox</sender>
    <signal>accepted()</signal>
-   <receiver>startWindow</receiver>
+   <receiver>StartWindow</receiver>
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
@@ -177,7 +177,7 @@
   <connection>
    <sender>buttonBox</sender>
    <signal>rejected()</signal>
-   <receiver>startWindow</receiver>
+   <receiver>StartWindow</receiver>
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
@@ -193,7 +193,7 @@
   <connection>
    <sender>buttonOptions</sender>
    <signal>clicked()</signal>
-   <receiver>startWindow</receiver>
+   <receiver>StartWindow</receiver>
    <slot>openOptions()</slot>
    <hints>
     <hint type="sourcelabel">
