--- a/gui/src/settings/options-window.ui
+++ b/gui/src/settings/options-window.ui
@@ -810,6 +810,27 @@
           </property>
          </widget>
         </item>
+        <item row="13" column="0">
+         <widget class="QLabel" name="label_2">
+          <property name="text">
+           <string>If an image yields multiple files</string>
+          </property>
+         </widget>
+        </item>
+        <item row="13" column="1">
+         <widget class="QComboBox" name="comboMultipleFiles">
+          <item>
+           <property name="text">
+            <string>Copy</string>
+           </property>
+          </item>
+          <item>
+           <property name="text">
+            <string>Link</string>
+           </property>
+          </item>
+         </widget>
+        </item>
        </layout>
       </widget>
       <widget class="QWidget" name="pageSaveFilenames">
@@ -974,8 +995,8 @@
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>369</width>
-             <height>377</height>
+             <width>100</width>
+             <height>30</height>
             </rect>
            </property>
            <layout class="QVBoxLayout" name="scrollAreaWidgetLayout">
