--- a/gui/src/utils/rename-existing/rename-existing-2.ui
+++ b/gui/src/utils/rename-existing/rename-existing-2.ui
@@ -14,7 +14,7 @@
    <string>Rename existing images</string>
   </property>
   <property name="windowIcon">
-   <iconset resource="../../../resources.qrc">
+   <iconset resource="../../../resources/resources.qrc">
     <normaloff>:/images/icon.ico</normaloff>:/images/icon.ico</iconset>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
@@ -93,9 +93,7 @@
   </layout>
  </widget>
  <resources>
-  <include location="../../../resources.qrc"/>
-  <include location="../../../resources.qrc"/>
-  <include location="../../../resources.qrc"/>
+  <include location="../../../resources/resources.qrc"/>
  </resources>
  <connections/>
 </ui>
