--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -1,5 +1,5 @@
-  <!doctype html>
-<html>
+<!doctype html>
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="chrome=1" />
