Add alt tag to the site logo

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -25,7 +25,7 @@
 
           <div class="head">
             {% if site.logo %}
-              <img src="{{ site.logo | relative_url }}" alt="" />
+              <img src="{{ site.logo | relative_url }}" alt="logo" />
             {% endif %}
 
             <div class="hright">
