--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
 		<!--[if lt IE 9]>
 			<script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
-		{% comment %}{% seo title=false %}{% endcomment %}
+		{% seo title=false %}
 	</head>
 	<body {%- if layout.class %} class="{{ layout.class }}"{% endif %}>
 		{{ content }}
