--- a/_includes/body.html
+++ b/_includes/body.html
@@ -2,6 +2,7 @@
 	<header>
 		<div class="container">
 			<ul class="nav navbar-nav navbar-right">
+				<li><a href="{{ '/' | relative_url }}">Home</a></li>
 				<li><a href="{{ '/docs/' | relative_url }}">Documentation</a></li>
 				<li><a href="{{ site.github.repository_url }}/blob/master/LICENSE">License</a></li>
 				<li><a href="{{ site.github.repository_url }}/issues">Issue tracker</a></li>
