--- a/gui/src/tabs/tag-tab.ui
+++ b/gui/src/tabs/tag-tab.ui
@@ -253,6 +253,9 @@
       </item>
       <item row="0" column="2">
        <widget class="QLabel" name="label_7">
+        <property name="statusTip">
+         <string>How many sources should appear per line.</string>
+        </property>
         <property name="text">
          <string>Number of columns</string>
         </property>
