Add tab selector with tab count (issue #1094, issue #1413)

--- a/gui/src/tabs/log-tab.ui
+++ b/gui/src/tabs/log-tab.ui
@@ -23,7 +23,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>New tab</string>
+   <string>Log</string>
   </property>
   <property name="windowIcon">
    <iconset resource="../../resources/resources.qrc">
