--- a/gui/resources/resources.qrc
+++ b/gui/resources/resources.qrc
@@ -63,5 +63,6 @@
         <file>images/icons/tab-arrow.png</file>
         <file>images/icons/edit.png</file>
         <file>images/status/ignored.png</file>
+        <file>images/back.png</file>
     </qresource>
 </RCC>
